rust/core/src/search/snapshots/lucid_suggest_core__search__tests__search_stemming-2.snap
---
source: src/search/mod.rs
expression: results2
---
[
    SearchResult {
        id: 30,
        title: "[univers]e",
    },
]
