rust/core/src/search/snapshots/lucid_suggest_core__search__tests__search_utf_normalization-4.snap
---
source: src/search/mod.rs
expression: result
---
[
    SearchResult {
        id: 20,
        title: "[Passstraß]e",
    },
]
