rust/core/src/search/snapshots/lucid_suggest_core__search__tests__search_utf_normalization.snap
---
source: src/search/mod.rs
expression: result
---
[
    SearchResult {
        id: 10,
        title: "[Mitteltö]ner",
    },
]
