rust/core/src/search/snapshots/lucid_suggest_core__search__tests__transpositions-0.snap
---
source: src/search/mod.rs
expression: results
---
[
    SearchResult {
        id: 30,
        highlighted: "yellow [metal] [mailbox]",
    },
    SearchResult {
        id: 20,
        highlighted: "[metal] detector",
    },
]
